# nornir_spectrum

./: README.md  setup.cfg
nornir_spectrum/plugins/inventory/: spectrum.py
tests/data/: devices_response.xml
