[metadata]
name = nornir_spectrum
version = 0.1.0
author = John Dowson
description = Spectrum plugins for nornir
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnrdowson/nornir_spectrum
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests
    lxml
    nornir>=3.0.0,<4.0.0

[options.packages.find]
exclude = tests*

[options.entry_points]
nornir.plugins.inventory = 
    SpectrumInventory = nornir_spectrum.plugins.inventory.spectrum:SpectrumInventory
